--- a/src/index.css
+++ b/src/index.css
@@ -511,6 +511,21 @@ button {
   justify-content: center;
   align-items: center;
 }
+.returnIconDiv {
+  cursor: pointer;
+  position: fixed;
+  top: 3%;
+  left: 5%;
+  z-index: 2;
+  background-color: #ffffff;
+  border-radius: 50%;
+  width: 3rem;
+  height: 3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transform: rotate(180deg)
+}
 
 .listingName {
   font-weight: 600;
