feat: add edit listing page

--- a/src/index.css
+++ b/src/index.css
@@ -76,13 +76,13 @@ button {
   cursor: pointer;
   position: absolute;
   top: -3%;
-  right: -2%;
+  right: 0%;
 }
 .editIcon {
   cursor: pointer;
   position: absolute;
   top: -3.4%;
-  right: 20px;
+  right: 30px;
 }
 
 .pageContainer,
@@ -439,6 +439,7 @@ button {
   font-size: 0.7rem;
   opacity: 0.8;
   margin-bottom: 0;
+  width: 80%;
 }
 
 .categoryListingName {
